# perexchange

./: .gitignore  examples.py  mise.toml  pyproject.toml  readme.md  requirements.txt
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: codeql.yml  core-ci.yml  publish.yml  test.yml
perexchange/: __init__.py  cli.py  core.py
perexchange/scrapers/: __init__.py  cuantoestaeldolar.py
pkg/cli/: pyproject.toml  readme.md
pkg/cli/perexchange_cli/: main.py
pkg/core/: pyproject.toml  readme.md  requirements.txt
pkg/core/perexchange/: __init__.py  analysis.py  core.py  models.py
pkg/core/perexchange/scrapers/: __init__.py  base.py  cambiafx.py  cambioseguro.py  chapacambio.py  cuantoestaeldolar.py  dollarhouse.py  instakash.py  srcambio.py  tkambio.py  tucambista.py  westernunion.py  yanki.py
pkg/core/tests/: conftest.py  test_analysis.py  test_integration.py  test_models.py  test_scrapers.py
pkg/core/tests/fixtures/cambiafx/: happy_path.json  malformed_data.json  missing_data.json
pkg/core/tests/fixtures/cambioseguro/: empty.json  happy_path.json  malformed_data.json  missing_data.json
pkg/core/tests/fixtures/chapacambio/: happy_path.json  malformed_data.json  missing_data.json
pkg/core/tests/fixtures/dollarhouse/: happy_path.html  malformed_data.html  mismatched_data.html  missing_data.html
pkg/core/tests/fixtures/instakash/: empty.html  happy_path.html  malformed_data.html  missing_data.html
pkg/core/tests/fixtures/srcambio/: empty.json  happy_path.json  malformed_data.json  missing_data.json
pkg/core/tests/fixtures/tkambio/: happy_path.json  malformed_data.json  missing_data.json
pkg/core/tests/fixtures/tucambista/: happy_path.json  malformed_data.json  missing_data.json
pkg/core/tests/fixtures/westernunion/: happy_path.json  malformed_data.json  missing_data.json  page.html
pkg/core/tests/fixtures/yanki/: empty.json  happy_path.json  malformed_data.json  missing_data.json
pkg/core/tests/integration/: test_end_to_end.py  test_schema.py  test_smoke.py
pkg/core/tests/scrapers/: test_cambioseguro.py  test_cuantoestaeldolar.py  test_tkambio.py  test_tucambista.py  test_westernunion.py
pkg/core/tests/unit/: test_base.py  test_parsing.py
tests/: test_analysis.py  test_integration.py  test_models.py  test_scraping.py
tests/fixtures/: class_hash.html  empty.html  happy_path.html  malformed_data.html  missing_data.html
tools/: build_check.py  release.py  update_version.py
