[project]
name = "perexchange"
version = "1.0.0"
description = "Library for fetching Peruvian exchange rates"
readme = "readme.md"
requires-python = ">=3.9"

authors = [
    { name = "David Duran", email = "dadch1404@gmail.com" }
]

license = "MIT"

dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx[http2]>=0.27.2",
    "lxml>=6.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
